[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scipts/Bullet.gd" type="Script" id=1]
[ext_resource path="res://Sprites/bullet.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2.52548, 1.10154 )

[node name="Bullet" type="Area2D"]
position = Vector2( 1.66575, 5.80324 )
collision_layer = 4
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.0537338, 0 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.161201, 0.59107 )
texture = ExtResource( 2 )

[node name="Lifetime" type="Timer" parent="."]
[connection signal="area_entered" from="." to="." method="_on_Bullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="Lifetime" to="." method="_on_Lifetime_timeout"]
